# jwstfits

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  jwstfits.rst  modules.rst
jwstfits/: README.md  __init__.py  nirspec.py  utils.py
